IPROTO-xxx ProtoAdapter support for subclasses